WIP: Fix alignment of elements in <Carousel /> molecule

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #009F00;
 $secondary-color: lightgoldenrodyellow;
+$tertiary-color: #5755d9;
 $dark-color: #333333;
 
 // $primary-font: 'Abril Fatface';
