--- a/client/src/styles/components/_carousel.scss
+++ b/client/src/styles/components/_carousel.scss
@@ -1,34 +1,26 @@
 .carousel-wrapper {
-	display: grid;
-	grid-template-areas: "slide-track";
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 1rem;
+	width: 100vw;
 	max-width: 1024px;
-
-	@media (min-width: 480px) {
-		margin-bottom: 1.5rem;
-	}
-
-	@media (min-width: 768px) {
-		height: 530px;
-		grid-template-areas: "slide-track thumbnail-track";
-		grid-column-gap: .5rem;
-		margin-bottom: 2.5rem;
-	}
+	overflow-y: hidden;
+	margin-bottom: 1rem;
 
 	@media (min-width: 992px) {
-		height: 600px;
+		margin-bottom: 2rem;
 	}
 }
 
 .carousel-slide-track {
-	&__outer {
-		grid-area: slide-track;
-		position: relative;
-		overflow-x: hidden;
-		height: max-content;		
+	grid-area: slide-track;
+	position: relative;
+	overflow: hidden;
+	height: max-content;
+	margin-right: 0;
+
+	@media (min-width: 768px) {
+		margin-right: 150px;
 	}
 
 	&__inner {
@@ -41,72 +33,57 @@
 .carousel-slide {
 	flex: 1;
 
-	@media (min-width: 768px) {
-		padding-right: 138px;
-	}
-
-	@media (min-width: 992px) {
-		padding-right: 158px;
-	}
-
 	&__image {
-		height: 300px;
 		width: 100%;
-		
-		@media (min-width: 480px) {
-			height: 400px;
-		}
-
-		@media (min-width: 768px) {
-			height: 540px;
-		}
-
-		@media (min-width: 992px) {
-			height: 600px;
-		}
+		height: 100%;
 	}
 }
 
 .carousel-thumbnail-track {
-	&__outer {
-		grid-area: thumbnail-track;
-		display: none;
-		overflow-y: scroll;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 150px;
+	grid-area: thumbnail-track;
+	overflow-y: scroll;
+	display: none;
+	height: 102%;
+	
 
-		@media (min-width: 768px) {
-			display: initial;
-		}
+	@media (min-width: 768px) {
+		// display: table-row;
+		display: initial;
 	}
 
 	&__inner {
-		height: 100%;
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
 		display: grid;
 		grid-template-columns: auto;
-
-		max-width: 130px;
-		grid-template-rows: repeat(auto-fit, 94px);
-
-		@media (min-width: 992px) {
-			max-width: 150px;
-			grid-template-rows: repeat(auto-fit, 107px);
-		}
+		padding-left: 3px;
 	}
 }
 
 .carousel-thumbnail {
+	width: 150px;
+	height: 100%;
 	cursor: pointer;
 	img {
-		max-width: 100%;
-	}
-
-	&:last-child {
-		background-color: lighten($dark-color, 10%);
+		width: 100%;
+		height: 100%;
+		padding-bottom: 3px;
 	}
 }
 
 .carousel-arrow {
 	position: absolute;
 	z-index: 3;
+	svg {
+		fill: $light-color;
+	}
 
 	&--left {
 		left: 1%;
